force-app/main/default/objects/DocuSignCredential__mdt/DocuSignCredential__mdt.object-meta.xml
<CustomObject>
    <description>Store the credentials for DocuSign authentication</description>
    <label>DocuSign Credential</label>
    <pluralLabel>DocuSign Credentials</pluralLabel>
</CustomObject>