force-app/main/default/objects/DocuSignCredential__mdt/fields/Access_Token_Scope__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Scope__c</fullName>
    <label>Access Token Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>