force-app/main/default/objects/DocuSignCredential__mdt/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <inlineHelpText>Long form of the account id with 4 dashes (xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx).</inlineHelpText>
    <label>Account Id (Long)</label>
    <length>36</length>
    <type>Text</type>
</CustomField>