force-app/main/default/objects/DocuSignCredential__mdt/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <inlineHelpText>Site ID</inlineHelpText>
    <label>Account Number (Short)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>