force-app/main/default/objects/DocuSignCredential__mdt/fields/IntegrationKey__c.field-meta.xml
<CustomField>
    <fullName>IntegrationKey__c</fullName>
    <inlineHelpText>With 4 dashes (xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx)</inlineHelpText>
    <label>Integration Key</label>
    <length>36</length>
    <type>Text</type>
</CustomField>