force-app/main/default/objects/DocuSignCredential__mdt/fields/IsSandbox__c.field-meta.xml
<CustomField>
    <fullName>IsSandbox__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Sandbox?</label>
    <type>Checkbox</type>
</CustomField>