force-app/main/default/objects/DocuSignCredential__mdt/fields/JWT_Request_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>JWT_Request_Endpoint__c</fullName>
    <label>JWT Request Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>