force-app/main/default/objects/DocuSignCredential__mdt/fields/Multiform_Boundary__c.field-meta.xml
<CustomField>
    <fullName>Multiform_Boundary__c</fullName>
    <label>Multiform Boundary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>