force-app/main/default/objects/DocuSignCredential__mdt/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <inlineHelpText>With 4 dashes (xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx).</inlineHelpText>
    <label>User Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>