force-app/main/default/objects/DocuSignCredential__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <type>Email</type>
</CustomField>